[package]
name = "Installer-Packager-Handler-RUST"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-msvc]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin14-clang"
ar = "x86_64-apple-darwin14-ar"

[dependencies]
rfd = "0.15.3"          # diálogos nativos multiplataforma
zip = "3.0.0"          # creación de ZIPs
walkdir = "2.5.0"      # iteración recursiva de carpetas